...
    Surface(
        modifier = Modifier
            .clickable(
                onClick = { onSelectCard(consent) }
            )
            .semantics { testTagsAsResourceId = true }
            .testTag("saved-consent"),
    ) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier
                .background(
                    shape = RoundedCornerShape(8.dp),
...
private fun MenuConsentItem(
    consent: PaymentConsent,
    onDeleteCard: (PaymentConsent) -> Unit
) {
    Image(
        painter = painterResource(id = R.drawable.airwallex_ic_three_dots_vertical),
        contentDescription = "three dots",
        colorFilter = ColorFilter.tint(
            if (consent.nextTriggeredBy == PaymentConsent.NextTriggeredBy.MERCHANT) {
                AirwallexColor.iconDisabled
            } else {
                AirwallexColor.theme
            }
...
