...
                }
            }
            .semantics {
                testTagsAsResourceId = true
                contentType = ContentType.CreditCardExpirationDate
            }
            .testTag("card-expiry-text-field"),
        options = StandardTextFieldOptions(
            inputType = StandardTextFieldOptions.InputType.NUMBER,
            returnType = StandardTextFieldOptions.ReturnType.DONE,
        ),
        onComplete = {
            onComplete(textFieldValue.text)
...
