...

@Composable
@Preview
private fun CountrySelectRowPreview() {
    CountrySelectRow(
        options = listOf(
            "United States" to "US",
            "United Kingdom" to "GB",
        ),
        default = "US",
        onOptionSelected = {},
    )
}
